// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Touchable renders correctly disabled 1`] = `
<DocumentFragment>
  .cache-l6o7sv {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
}

.cache-l6o7sv[aria-disabled='true'] {
  opacity: 0.5;
  cursor: not-allowed;
}

.cache-l6o7sv[aria-disabled='false'] {
  cursor: pointer;
  touch-action: manipulation;
}

<button
    aria-disabled="true"
    class="e1kgqxfn0 cache-l6o7sv e7ah3bn0"
    disabled=""
    type="button"
  >
    Basic Touchable
  </button>
</DocumentFragment>
`;

exports[`Touchable renders correctly on focus 1`] = `
<DocumentFragment>
  .cache-122wgzc {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
}

.cache-122wgzc.cache-122wgzc:active {
  opacity: 0.7;
}

.cache-122wgzc[aria-disabled='true'] {
  opacity: 0.5;
  cursor: not-allowed;
}

.cache-122wgzc[aria-disabled='false'] {
  cursor: pointer;
  touch-action: manipulation;
}

.cache-122wgzc[aria-disabled='false']:active {
  opacity: 0.7;
}

<button
    aria-disabled="false"
    class="e1kgqxfn0 cache-122wgzc e7ah3bn0"
    tabindex="0"
    type="button"
  >
    Basic Touchable
  </button>
</DocumentFragment>
`;

exports[`Touchable renders correctly with a non default as and type 1`] = `
<DocumentFragment>
  .cache-l6o7sv {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
}

.cache-l6o7sv[aria-disabled='true'] {
  opacity: 0.5;
  cursor: not-allowed;
}

.cache-l6o7sv[aria-disabled='false'] {
  cursor: pointer;
  touch-action: manipulation;
}

<div
    aria-disabled="false"
    class="e1kgqxfn0 cache-l6o7sv e7ah3bn0"
    type="button"
  >
    Button Touchable
  </div>
</DocumentFragment>
`;

exports[`Touchable renders correctly with defaults 1`] = `
<DocumentFragment>
  .cache-l6o7sv {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
}

.cache-l6o7sv[aria-disabled='true'] {
  opacity: 0.5;
  cursor: not-allowed;
}

.cache-l6o7sv[aria-disabled='false'] {
  cursor: pointer;
  touch-action: manipulation;
}

<button
    aria-disabled="false"
    class="e1kgqxfn0 cache-l6o7sv e7ah3bn0"
    type="button"
  >
    Basic Touchable
  </button>
</DocumentFragment>
`;
